tests/named_args_underscore_prefix_after_named_bad.stderr
tests/named_args_underscore_prefix_after_named_bad.hop:2:12: error: HOP2116: anonymous parameter '_z' cannot follow named parameter 'y'
