tests/named_args_underscore_prefix_after_named_bad.hop
// Verifies underscore-prefixed parameters are rejected after a named parameter.
fn f(x, y, _z int) int {
	return x + y + _z
}

fn main() {
	var x = f(1, y: 2, _z: 3)
	_ = x
}
